# amz-offers-task-sender

./: .gitignore  README.md  pyproject.toml
carts_amz_offers/: amazon_product_ref.py  cli.py  data_source.py  gcs_helper.py  offers_update_metrics.py  offers_update_run_stats.py  priority_tiers.py  sender.py  urgent_cli.py
scripts/: amz_offers_update_task_sender.sh  carts_amz_offers_update_task_sender.sh  crontab.amz_offers_update_task_sender.example  logrotate.amz_offers_update_task_sender  run_amz_offers_update_task_sender.sh  run_with_lock.sh  send_urgent_item_offers.sh
tests/: test_amazon_product_ref.py  test_data_source.py
