[project]
name = "em-carts-amz-offers-task-sender"
version = "0.1.0"
description = "Send Amazon offer update tasks from cart analytics seeds via em-spapi-celery"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click",
    "google-cloud-storage",
    "em-spapi-celery",
    "psycopg>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
carts_amz_offers_update_task_sender = "carts_amz_offers.cli:feed_seeds"

[tool.uv.sources]
em-spapi-celery = { path = "../em-spapi-celery", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["carts_amz_offers*"]
